// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() updates internal packages 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "foo",
      },
    ],
    "lernaPackages": [
      "packages/*",
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": "lerna.json",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
  {
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": "lerna.json",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses lerna package settings 1`] = `
[
  {
    "deps": [
      {
        "depName": "@org/a",
        "isInternal": true,
      },
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "foo",
      },
    ],
    "lernaPackages": [
      "packages/*",
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
    },
    "packageFile": "package.json",
  },
  {
    "deps": [
      {
        "depName": "@org/b",
        "isInternal": true,
      },
      {
        "depName": "@org/c",
      },
      {
        "depName": "bar",
      },
    ],
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": "lerna.json",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
  {
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": "lerna.json",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings with lerna 1`] = `
[
  {
    "lernaClient": "yarn",
    "lernaPackages": [
      "oldpackages/*",
    ],
    "managerData": {
      "lernaJsonFile": "lerna.json",
    },
    "packageFile": "package.json",
    "yarnWorkspacesPackages": [
      "packages/*",
    ],
  },
  {
    "lernaClient": "yarn",
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": "lerna.json",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
  {
    "lernaClient": "yarn",
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": "lerna.json",
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses yarn workspaces package settings without lerna 1`] = `
[
  {
    "npmrc": "@org:registry=//registry.some.org
",
    "packageFile": "package.json",
    "yarnWorkspacesPackages": "packages/*",
  },
  {
    "hasYarnWorkspaces": true,
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "npmrc": "@org:registry=//registry.some.org
",
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "skipInstalls": undefined,
    "yarnLock": "yarn.lock",
  },
  {
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": undefined,
      "yarnZeroInstall": undefined,
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "skipInstalls": undefined,
    "yarnLock": undefined,
  },
]
`;

exports[`modules/manager/npm/extract/monorepo .extractPackageFile() uses yarnZeroInstall and skipInstalls from yarn workspaces package settings 1`] = `
[
  {
    "managerData": {
      "yarnZeroInstall": true,
    },
    "npmrc": "@org:registry=//registry.some.org
",
    "packageFile": "package.json",
    "skipInstalls": false,
    "yarnWorkspacesPackages": "packages/*",
  },
  {
    "hasYarnWorkspaces": true,
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": undefined,
      "yarnZeroInstall": true,
    },
    "npmLock": undefined,
    "npmrc": "@org:registry=//registry.some.org
",
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "skipInstalls": false,
    "yarnLock": "yarn.lock",
  },
  {
    "lernaClient": undefined,
    "managerData": {
      "hasPackageManager": undefined,
      "lernaJsonFile": undefined,
      "yarnZeroInstall": true,
    },
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "skipInstalls": false,
    "yarnLock": undefined,
  },
]
`;
